raffia/tests/error/at-rule/keyframes/declaration.snap
---
source: raffia/tests/error.rs
---
error: expect token `{`, but found `:`
  ┌─ declaration.css:2:8
  │
2 │   width: 100px;
  │        ^


